[package]
name = "weather-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"]}
tokio = { version = "1", features = ["full"]}
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15"